# dbt-duck-flow

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  template.env
.devcontainer/: Dockerfile  devcontainer.json
1_ingestion/: dataset.py  duck.py  pipeline.py  snowflake_q.py
2_transform/housing_market/: .gitignore  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
2_transform/housing_market/macros/: create_external_stage.sql  export_data.sql  external_stage_export.sql  local_export.sql
2_transform/housing_market/models/: schema.yml  sources.yml
2_transform/housing_market/models/marts/: d_region.sql  dim_region.sql  fct_housing_market.sql
2_transform/housing_market/models/schema/: f_housing_market.sql
2_transform/housing_market/models/staging/: processed_data.sql  raw_data.sql  sources.yml  stg_housing_market__pro.sql  stg_housing_market__pro.yml  stg_housing_market__raw.sql  stg_housing_market__raw.yml
3_analysis/notebook/: eda.ipynb
ingestion/: dataset.py  duck.py  models.py  pipeline.py  query_dw.py  snowflake_q.py  snowflake_query.py
transform/housing_market/: .gitignore  dbt_project.yml  profiles.yml
transform/housing_market/local_storage/: processed_data.parquet  raw_data.parquet
transform/housing_market/models/: schema.yml  schema_model.sql  sources.yml
transform/housing_market/models/staging/: processed_data.sql  raw_data.sql
