[tool.poetry]
name = "dbt-duckdb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
duckdb = "^1.0.0"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
fire = "^0.6.0"
loguru = "^0.7.2"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
boto3 = "^1.34.134"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
